# PID_AI

./: .gitignore
5060Ti/: generate_ligem_report_0.py  p1_00_check_env.py  p1_06_DEM_V0.sh  p1_06_GPU_DEM.py  teste_gpu_pdal.json
L40S/: p1_00_env_snapshot.sh  p1_06_DEM.sh
P1/: 2026_03_24_Estrutura.txt  README.md
P1/5060Ti/: p1_06_DEM.sh  p1_config.sh  p1_fix_coords.py
P1/L40S/: p1_02_exhaustive_matching.sh  p1_select_init_pair.py
P1/P1000/: p1_05_export_dense_robusto.sh  p1_06_DEM.sh
P1/Src/: test_cudavoxel.json
P1/V0.1/5060Ti/: p1_03_sparse_mapper.sh  p1_env_snapshot.py
P1/V0.1/L40S/: p1_00_check_env.py  p1_01_feature_extraction.sh  p1_03_sparse_mapper.sh  p1_04_dense_reconstruction.sh  p1_05_export_dense_robusto.sh  p1_05_stat.py  p1_06_DEM.sh  p1_06_GPU_DEM.py  p1_07_orthomosaic.py  p1_07_orthomosaic.sh  p1_config.sh  p1_dialog_overlap.py  run_pipeline.sh
P1/V0.1/P1000/: check_ply_coords.sh  p1_logging.sh  run_pipeline_ds02.sh
P1/V0.1/Src/: Compilar e distribuir plugins CUDA.txt
P1/V0.2/5060Ti/: Teste_erro_localizacao.py  check_ply_coords.sh  (+13 more)
P1/V0.2/Src/pdal-cuda-plugin/: CMakeLists.txt
P1/V0.2/Src/pdal-cuda-plugin/cuda/: voxel_kernel.cu
P1000/: Teste_erro_localizacao.py  p1_03_sparse_mapper.sh  p1_04_dense_reconstruction.sh  p1_05_export_dense.py  p1_config.sh
P2/: estrategia_pipeline_P2_dois_ambientes.docx  estrategia_pipeline_P2_dois_ambientes_revisada.docx
P2/5060Ti/: p1_00_check_env.sh  p1_04_dense_reconstruction.sh
P2/L40S/: generate_ligem_report.py  p2_config.sh
P2/P1000/: p1_01_feature_extraction.sh  p1_07_orthophoto.sh
(+65 files in other folders)
